Corrige erro na expressao regular

--- a/exercicios_pandas.ipynb
+++ b/exercicios_pandas.ipynb
@@ -181,7 +181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "b) Agora use um `.replace` na coluna `Gender` para substituir os campos com valores \"M\" incorretos. _Dica:_ devemos usar `^SM$`  para restringir o padrão e capturar somente a string M. Procure a documentação do método `replace` em strings."
+    "b) Agora use um `.replace` na coluna `Gender` para substituir os campos com valores \"M\" incorretos. _Dica:_ devemos usar `^M$`  para restringir o padrão e capturar somente a string M. Procure a documentação do método `replace` em strings."
    ]
   },
   {
